--- a/rl_games/configs/openai/ppo_gym_hand_xyz.yaml
+++ b/rl_games/configs/openai/ppo_gym_hand_xyz.yaml
@@ -29,8 +29,8 @@ params:
         name:  'None' #'l2_regularizer'
         #scale: 0.001
 
-  load_checkpoint: True
-  load_path: nn/HandVM_Block_Dense_XYZ.pth
+  load_checkpoint: False
+  load_path: path
 
   config:
       reward_shaper:
@@ -39,11 +39,9 @@ params:
       normalize_advantage: True
       gamma: 0.99
       tau: 0.9
-      learning_rate: 3e-4
-      name: HandVM_Block_Dense_XYZ
-      score_to_win: 1000
-      save_best_after : 100
-      save_frequency : 100
+      learning_rate: 1e-4
+      name: Hand_Block_XYZ_Dense
+      score_to_win: 100
       grad_norm: 1.0
       entropy_coef: 0.0
       truncate_grads: True
@@ -52,8 +50,8 @@ params:
       e_clip: 0.2
       clip_value: True
       num_actors: 8
-      steps_num: 2048
-      minibatch_size: 4096
+      steps_num: 1024
+      minibatch_size: 2048
       mini_epochs: 15
       critic_coef: 4
       lr_schedule:  adaptive
@@ -65,5 +63,5 @@ params:
 
       env_config:
         #name: HandManipulateBlockRotateZDense-v0
-        name: HandVMManipulateBlockRotateXYZDense-v0
+        name: HandManipulateBlockRotateXYZDense-v0
         #name: HandManipulateBlockRotateDense-v0
