--- a/rl_games/configs/rrc/ppo_push.yaml
+++ b/rl_games/configs/rrc/ppo_push.yaml
@@ -20,7 +20,7 @@ params:
           val: 0
         fixed_sigma: True
     mlp:
-      units: [400, 200, 100]
+      units: [256, 128, 64]
       activation: elu
       initializer:
         name: variance_scaling_initializer
@@ -29,8 +29,8 @@ params:
         name:  'None' #'l2_regularizer'
         #scale: 0.001
 
-  load_checkpoint: True
-  load_path: nn/HandVM_Block_Dense_XYZ.pth
+  load_checkpoint: False
+  load_path: nn/push_small.pth
 
   config:
       reward_shaper:
@@ -40,30 +40,28 @@ params:
       gamma: 0.99
       tau: 0.9
       learning_rate: 3e-4
-      name: HandVM_Block_Dense_XYZ
-      score_to_win: 1000
+      name: push0_bonus
+      score_to_win: 10000
       save_best_after : 100
-      save_frequency : 100
+      save_frequency : 200
       grad_norm: 1.0
       entropy_coef: 0.0
       truncate_grads: True
-      env_name:  openai_robot_gym
+      env_name:  rrc_gym
       ppo: true
       e_clip: 0.2
       clip_value: True
       num_actors: 8
-      steps_num: 2048
-      minibatch_size: 4096
-      mini_epochs: 15
+      steps_num: 256
+      minibatch_size: 2048
+      mini_epochs: 12
       critic_coef: 4
       lr_schedule:  adaptive
       lr_threshold: 0.008
       normalize_input: True
-      seq_len: 8
+      seq_len: 4
       bounds_loss_coef: 0.0001
-      max_epochs: 10000
+      max_epochs: 100000
 
       env_config:
-        #name: HandManipulateBlockRotateZDense-v0
-        name: HandVMManipulateBlockRotateXYZDense-v0
-        #name: HandManipulateBlockRotateDense-v0
+        name: HandManipulateBlockRotateZDense-v0
