added critic mlp params to a2c continuous

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,6 @@ atari = ["ale-py", "AutoROM"]
 brax = ["brax", "jax"]
 mujoco = ["mujoco-py"]
 envpool = ["envpool"]
+
+[tools.black]
+exclude = ["."]
